# mandelbrot-opengl

./: CMakeLists.txt  README.md  build.sh  generate_shaders.sh
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  setup.cpp  setup.h  shaders.cpp  shaders.h  shaders_generated.h
